--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <![endif]-->
         <div class="container">
         	<h1>Riccardo Zaffalon</h1>
-        	<h2>Web Developer – UI Designer</h2>
+        	<h2>Web Developer • UI Designer</h2>
         	<p>Website coming soon.</p>
         	<p><a target="_blank" href="//behance.net/RiccardoZaffalon">Portfolio</a> | <a target="_blank" href="mailto:riccardo.zaffalon@gmail.com">Get in touch</a></p>
         </div>
