--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
     <meta name="description"
         content="Riccardo Zaffalon, interface designer and frontend web developer, specialized in building fast and enjoyable web experiences, using modern web technologies and user-centered design">
     <meta name="theme-color" content="#070201">
+    <link rel="icon" href="favicon.ico" type="image/x-icon"/>
     <link rel="stylesheet" href="//use.typekit.net/yel0ajc.css">
     <link rel="stylesheet" href="css/main.css">
 </head>
@@ -16,19 +17,18 @@
 <body>
     <header id="top">
         <section>
-            <h1 data-aos="fade-up">Riccardo Zaffalon</h1>
+            <h1 data-aos="fade">Riccardo Zaffalon</h1>
 
-            <p data-aos="fade-up" data-aos-delay="50">Hi, I’m Riccardo, an Italian-Canadian interface designer and
+            <p data-aos="fade" data-aos-delay="100">Hi, I’m Riccardo, an Italian-Canadian interface designer and
                 frontend
-                web developer;<br>
-                thank you for stopping by.</p>
+                web developer; thank you for stopping by.</p>
 
-            <p data-aos="fade-up" data-aos-delay="100">
+            <p data-aos="fade" data-aos-delay="200">
                 I specialize in building fast and enjoyable web experiences, using modern technologies and user-centered
                 design.
             </p>
 
-            <p data-aos="fade-up" data-aos-delay="150">
+            <p data-aos="fade" data-aos-delay="300">
                 <a href="#about" class="button">Learn more</a>
                 <a href="mailto:riccardo.zaffalon@gmail.com?subject=Hi%21&body=Ciao%20Riccardo%2C%0A%0A" target="_blank"
                     class="button button-primary">Get in touch →</a>
@@ -38,8 +38,8 @@
 
     <main id="about">
         <section>
-            <h2 data-aos="fade-up">About</h2>
-            <p data-aos="fade-up">
+            <h2 data-aos="fade">About</h2>
+            <p data-aos="fade">
                 <strong>Currently</strong>, and since the beginning of 2018, I help improving online shopping
                 experiences at
                 alpenite, where I develop and provide consultancy on Salesforce Commerce Cloud projects as a
@@ -55,14 +55,14 @@
                     target="_blank">AGV</a>, <a href="//www.boggi.com" target="_blank">Boggi
                     Milano</a>, and <a href="//shop.brunellocucinelli.com" target="_blank">Brunello Cucinelli</a>.
             </p>
-            <p data-aos="fade-up">
+            <p data-aos="fade">
                 Before then, I used to freelance independently in Canada, where I worked to improve my understanding of
                 the
                 industry and the complete production process, while enhancing my capability to work with diverse clients
                 from
                 different parts of the world.
             </p>
-            <p data-aos="fade-up">
+            <p data-aos="fade">
                 In my current role, I strive to bring value to the team by improving the production process with my
                 experience and skills, introducing new technologies, and easing the onboarding of less experienced
                 colleagues, whom I then aim to help grow and mentor.
@@ -72,7 +72,7 @@
 
     <footer id="contact">
         <section>
-            <p>If you want to know more, or just say “👋 Hi”, you are welcome to get in touch anytime at
+            <p data-aos="fade">If you want to know more, or just say “👋 Hi”, you are welcome to get in touch anytime at
                 <a href="mailto:riccardo.zaffalon@gmail.com?subject=Hi%21&body=Ciao%20Riccardo%2C%0A%0A"
                     target="_blank">riccardo.zaffalon@gmail.com</a> or find me on
                 <a href="//twitter.com/rzaffa" target="_blank">Twitter</a>, <a
