Update file paths for GitHub pages

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <meta name="theme-color" content="#070201">
     <link rel="icon" href="favicon.ico" type="image/x-icon"/>
     <link rel="stylesheet" href="//use.typekit.net/yel0ajc.css">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="dist/css/main.css">
 </head>
 
 <body>
@@ -82,7 +82,7 @@
         </section>
     </footer>
 
-    <script src="js/index.js"></script>
+    <script src="dist/js/index.js"></script>
 </body>
 
 </html>
