Remove built files

--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
             <p data-aos="fade">
                 <strong>Currently</strong>, and since the beginning of 2018, I help improving online shopping
                 experiences at
-                alpenite, where I develop and provide consultancy on Salesforce Commerce Cloud projects as a
+                <a href="//www.alpenite.com" target="_blank">alpenite</a>, where I develop and provide consultancy on Salesforce Commerce Cloud projects as a
                 <strong>Senior
                     Technical Consultant</strong>.
                 During my time here I have had the opportunity to lead the frontend development of ecommerce websites
