--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="scss/main.scss">
 </head>
 
-<body">
+<body>
     <div class="container">
         <h1 id="page-title"><span>Hi, I’m Riccardo</span></h1>
 
