Adjust mobile bio

--- a/src/index.html
+++ b/src/index.html
@@ -18,10 +18,13 @@
 
         <div class="bio">
             <img data-reveal src="./images/me.jpg" id="profile-image" alt="Riccardo Zaffalon, frontend developer">
-
-            <h2 data-reveal>A frontend developer working in Venice,&nbsp;Italy. I specialize in building fast and enjoyable web experiences, using modern technologies and user-centered design.
-                <a href="mailto:riccardo.zaffalon@gmail.com" target="_blank">Get in touch →</a>
+            
+            <h2 data-reveal>A frontend developer working in Venice,&nbsp;Italy. <br>
+                I specialize in building fast and enjoyable web experiences, using modern technologies and user-centered design.
+                <a href="mailto:riccardo.zaffalon@gmail.com" target="_blank" class="bio__link">Get in touch →</a>
             </h2>            
+
+            <img src="./images/me.jpg" id="profile-image" alt="Riccardo Zaffalon, frontend developer">
         </div>
 
         <p data-reveal>
