--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
     <meta name="description"
         content="Riccardo Zaffalon, frontend web developer specialized in building fast and enjoyable web experiences, using modern web technologies and user-centered design">
     <meta name="theme-color" content="#0E0E0E">
+    <link rel="shortcut icon" href="favicon.ico" />
     <link rel="stylesheet" href="scss/main.scss">
 </head>
 
