--- a/src/index.html
+++ b/src/index.html
@@ -24,17 +24,21 @@
 
 <body>
     <div class="container">
-        <h1 id="page-title"><span>Hi, I’m Riccardo</span></h1>
-
+        <h1 class="intro">
+            <span class="page-title"><span>Hi,</span></span>
+            <span class="page-title"><span>I’m</span></span>
+            <span class="page-title"><span>Riccardo</span></span>
+        </h1>
+            
         <div class="bio">
-            <img data-reveal src="./images/me.jpg" id="profile-image" alt="Riccardo Zaffalon, frontend developer">
+            <img data-reveal data-reveal-delay="700" src="./images/me.jpg" alt="Riccardo Zaffalon, frontend developer">
             
             <h2 data-reveal>A frontend developer working in Venice,&nbsp;Italy. <br>
                 I specialize in building fast and enjoyable web experiences, using modern technologies and user-centered design.
                 <a href="mailto:riccardo.zaffalon@gmail.com" target="_blank" class="bio__link">Get in touch →</a>
             </h2>            
 
-            <img src="./images/me.jpg" id="profile-image" alt="Riccardo Zaffalon, frontend developer">
+            <img src="./images/me.jpg" id="profile-image-hover" alt="Riccardo Zaffalon, frontend developer">
         </div>
 
         <p data-reveal>
@@ -48,7 +52,7 @@
         </p>
         <br>
         <p data-reveal>
-            Previously, I lived in beautiful <strong>Vancouver, British Columbia</strong>, and worked as a freelancer for clients in Italy and Canada, providing digital solutions for small
+            Previously, I have lived in beautiful <strong>Vancouver, British Columbia</strong>, and worked as a freelancer for clients in Italy and Canada, providing digital solutions for small
             business owners and professionals.
         </p>
         <p data-reveal>
