--- a/src/index.html
+++ b/src/index.html
@@ -41,6 +41,7 @@
             <img src="./images/me.jpg" id="profile-image-hover" alt="Riccardo Zaffalon, frontend developer">
         </div>
 
+        <h3 data-reveal>Work</h3>
         <p data-reveal>
             I am currently at <a href="//www.alpenite.com" target="_blank">alpenite</a>, where I work as a <strong>Senior Consultant on Salesforce Commerce Cloud</strong> projects. Here I
             have had the opportunity to lead the frontend development of ecommerce websites for several fashion brands,
@@ -50,7 +51,8 @@
             Besides these projects, my main focuses are introducing new helpful technologies to streamline my team’s work, and
             <strong>mentor junior colleagues</strong>, to help them grow and bring increasingly more value to the company.
         </p>
-        <br>
+
+        <h3 data-reveal>Bio</h3>
         <p data-reveal>
             Previously, I have lived in beautiful <strong>Vancouver, British Columbia</strong>, and worked as a freelancer for clients in Italy and Canada, providing digital solutions for small
             business owners and professionals.
@@ -59,8 +61,12 @@
             Before that I paid my dues interning at a few web agencies, notably at <a href="//www.webtechnet.it" target="_blank">webtechnet</a> where I started bringing
             modern technologies into some of their older projects in 2015.
         </p>
-        
-        <p class="footer" data-reveal>
+
+        <h3 data-reveal>Tech</h3>
+        <p data-reveal>I am proficient in <u>HTML</u>, <u>CSS</u>, and their most popular preprocessors (<em>e.g. <u>Pug</u>, <u>SCSS</u></em>), <u>JavaScript</u> (<em>including <u>ES6</u> and <u>ESNext</u></em>), <u>Salesforce Commerce Cloud</u> (<em>Certified B2C Commerce Developer</em>), and <u>git</u>.</p>
+        <p data-reveal>I am experienced in <u>React</u>, <u>webpack</u>, and <u>Gulp</u>, as well as design tools such as <u>Figma</u> and <u>Sketch</u>.</p>
+
+        <p data-reveal class="footer">
             If you want to know more, or just say “👋 Hi”, you are welcome to get in touch anytime at <a href="mailto:riccardo.zaffalon@gmail.com" target="_blank">riccardo.zaffalon@gmail.com</a> or find me on <a href="//twitter.com/rzaffa" target="_blank">Twitter</a>, <a href="//www.linkedin.com/in/riccardozaffalon" target="_blank">LinkedIn</a>, and <a href="//github.com/RiccardoZaffalon" target="_blank">GitHub</a>.
         </p>
     </div>
