Update colors, text, minor UI

--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,11 @@
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-45220537-1"></script>
     <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
-    gtag('config', 'UA-45220537-1');
+        gtag('config', 'UA-45220537-1');
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -29,45 +29,64 @@
             <span class="page-title"><span>I’m</span></span>
             <span class="page-title"><span>Riccardo</span></span>
         </h1>
-            
+
         <div class="bio">
             <img data-reveal data-reveal-delay="700" src="./images/me.jpg" alt="Riccardo Zaffalon, frontend developer">
-            
+
             <h2 data-reveal>A frontend developer working in Venice,&nbsp;Italy. <br>
-                I specialize in building fast and enjoyable web experiences, using modern technologies and user-centered design.
+                I specialize in building fast and enjoyable web experiences, using modern technologies and user-centered
+                design.
                 <a href="mailto:riccardo.zaffalon@gmail.com" target="_blank" class="bio__link">Get in touch →</a>
-            </h2>            
+            </h2>
 
             <img src="./images/me.jpg" id="profile-image-hover" alt="Riccardo Zaffalon, frontend developer">
         </div>
 
         <h3 data-reveal>Work</h3>
         <p data-reveal>
-            I am currently at <a href="//www.alpenite.com" target="_blank">alpenite</a>, where I work as a <strong>Senior Consultant on Salesforce Commerce Cloud</strong> projects. Here I
+            Since the beginning of <strong>2018</strong> I have been at <a href="//www.alpenite.com"
+                target="_blank">alpenite</a>, where I work as a
+            <strong>Senior Consultant on Salesforce Commerce Cloud</strong> projects. Here I
             have had the opportunity to lead the frontend development of ecommerce websites for several fashion brands,
-            including <a href="//www.liujo.com" target="_blank">Liu Jo</a>, <a href="//www.pinko.com" target="_blank">Pinko</a>, <a href="//www.tezenis.com" target="_blank">Tezenis</a>, <a href="//www.intimissimi.com" target="_blank">Intimissimi</a>, and more.
+            including <a href="https://www.stellamccartney.com/" target="_blank">Stella McCartney</a>, <a
+                href="//www.liujo.com" target="_blank">Liu Jo</a>, <a href="//www.pinko.com" target="_blank">Pinko</a>,
+            <a href="//www.tezenis.com" target="_blank">Tezenis</a>, <a href="//www.intimissimi.com"
+                target="_blank">Intimissimi</a>, and more.
         </p>
         <p data-reveal>
-            Besides these projects, my main focuses are introducing new helpful technologies to streamline my team’s work, and
-            <strong>mentor junior colleagues</strong>, to help them grow and bring increasingly more value to the company.
+            Besides these projects, my main focuses are introducing new helpful technologies to streamline my team’s
+            work, and
+            <strong>mentor junior colleagues</strong>, to help them grow and bring increasingly more value to the
+            company.
         </p>
 
         <h3 data-reveal>Bio</h3>
         <p data-reveal>
-            Previously, I have lived in beautiful <strong>Vancouver, British Columbia</strong>, and worked as a freelancer for clients in Italy and Canada, providing digital solutions for small
+            Previously, I have lived in beautiful <strong>Vancouver, British Columbia</strong>, and worked as a
+            freelancer for clients in Italy and Canada, providing digital solutions for small
             business owners and professionals.
         </p>
         <p data-reveal>
-            Before that I paid my dues interning at a few web agencies, notably at <a href="//www.webtechnet.it" target="_blank">webtechnet</a> where I started bringing
-            modern technologies into some of their older projects in 2015.
+            Before that I paid my dues interning at a few web agencies, notably at <a href="//www.webtechnet.it"
+                target="_blank">webtechnet</a> where I started bringing
+            modern technologies into some of their older projects in <u>2015</u>.
         </p>
 
         <h3 data-reveal>Tech</h3>
-        <p data-reveal>I am proficient in <u>HTML</u>, <u>CSS</u>, and their most popular preprocessors (<em>e.g. <u>Pug</u>, <u>SCSS</u></em>), <u>JavaScript</u> (<em>including <u>ES6</u> and <u>ESNext</u></em>), <u>Salesforce Commerce Cloud</u> (<em>Certified B2C Commerce Developer</em>), and <u>git</u>.</p>
-        <p data-reveal>I am experienced in <u>React</u>, <u>webpack</u>, and <u>Gulp</u>, as well as design tools such as <u>Figma</u> and <u>Sketch</u>.</p>
+        <p data-reveal>I am proficient in <u>HTML</u>, <u>CSS</u>, and their most popular preprocessors (<em>e.g.
+                <u>Pug</u>, <u>SCSS</u></em>), <u>JavaScript</u> (<em>including <u>ES6</u> and <u>ESNext</u></em>),
+            <u>Salesforce Commerce Cloud</u> (<em>Certified B2C Commerce Developer</em>), and <u>git</u>.
+        </p>
+        <p data-reveal>I am experienced in <u>React</u>, <u>webpack</u>, and <u>Gulp</u>, as well as design tools such
+            as <u>Figma</u> and <u>Sketch</u>; I am currently focusing on the React ecosystem, with tools such as
+            <u>Next.js</u> and <u>styled-components</u>.
+        </p>
 
         <p data-reveal class="footer">
-            If you want to know more, or just say “👋 Hi”, you are welcome to get in touch anytime at <a href="mailto:riccardo.zaffalon@gmail.com" target="_blank">riccardo.zaffalon@gmail.com</a> or find me on <a href="//twitter.com/rzaffa" target="_blank">Twitter</a>, <a href="//www.linkedin.com/in/riccardozaffalon" target="_blank">LinkedIn</a>, and <a href="//github.com/RiccardoZaffalon" target="_blank">GitHub</a>.
+            If you want to know more, or just say “👋 Hi”, you are welcome to get in touch anytime at <a
+                href="mailto:riccardo.zaffalon@gmail.com" target="_blank">riccardo.zaffalon@gmail.com</a> or find me on
+            <a href="//twitter.com/rzaffa" target="_blank">Twitter</a>, <a href="//www.linkedin.com/in/riccardozaffalon"
+                target="_blank">LinkedIn</a>, and <a href="//github.com/RiccardoZaffalon" target="_blank">GitHub</a>.
         </p>
     </div>
     <script src="js/main.js"></script>
