--- a/src/index.html
+++ b/src/index.html
@@ -19,32 +19,251 @@
         content="Riccardo Zaffalon, frontend web developer specialized in building fast and enjoyable web experiences, using modern web technologies and user-centered design">
     <meta name="theme-color" content="#0E0E0E">
     <link rel="shortcut icon" href="favicon.ico" />
-    <link rel="stylesheet" href="scss/main.scss">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet">
+    <style>
+        /* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+        html,
+        body,
+        div,
+        span,
+        applet,
+        object,
+        iframe,
+        h1,
+        h2,
+        h3,
+        h4,
+        h5,
+        h6,
+        p,
+        blockquote,
+        pre,
+        a,
+        abbr,
+        acronym,
+        address,
+        big,
+        cite,
+        code,
+        del,
+        dfn,
+        em,
+        img,
+        ins,
+        kbd,
+        q,
+        s,
+        samp,
+        small,
+        strike,
+        strong,
+        sub,
+        sup,
+        tt,
+        var,
+        b,
+        u,
+        i,
+        center,
+        dl,
+        dt,
+        dd,
+        ol,
+        ul,
+        li,
+        fieldset,
+        form,
+        label,
+        legend,
+        table,
+        caption,
+        tbody,
+        tfoot,
+        thead,
+        tr,
+        th,
+        td,
+        article,
+        aside,
+        canvas,
+        details,
+        embed,
+        figure,
+        figcaption,
+        footer,
+        header,
+        hgroup,
+        menu,
+        nav,
+        output,
+        ruby,
+        section,
+        summary,
+        time,
+        mark,
+        audio,
+        video {
+            margin: 0;
+            padding: 0;
+            border: 0;
+            font-size: 100%;
+            font: inherit;
+            vertical-align: baseline;
+        }
+
+        /* HTML5 display-role reset for older browsers */
+        article,
+        aside,
+        details,
+        figcaption,
+        figure,
+        footer,
+        header,
+        hgroup,
+        menu,
+        nav,
+        section {
+            display: block;
+        }
+
+        body {
+            line-height: 1;
+        }
+
+        ol,
+        ul {
+            list-style: none;
+        }
+
+        blockquote,
+        q {
+            quotes: none;
+        }
+
+        blockquote:before,
+        blockquote:after,
+        q:before,
+        q:after {
+            content: '';
+            content: none;
+        }
+
+        table {
+            border-collapse: collapse;
+            border-spacing: 0;
+        }
+
+        /* Custom */
+        :root {
+            --spacer: 3em;
+            --half-spacer: 1.5rem;
+            --background: #ede8e3;
+            --foreground: #242322;
+            --accent: #19bb7e;
+            --foreground--highlight: var(--accent);
+            scroll-behavior: smooth;
+        }
+
+        body {
+            background-color: var(--background);
+            color: var(--foreground);
+            font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            line-height: 1.6;
+            font-weight: 300;
+        }
+
+        ::-moz-selection {
+            background: var(--foreground);
+            color: var(--background);
+        }
+
+        ::selection {
+            background: var(--foreground);
+            color: var(--background);
+        }
+
+        h2,
+        p {
+            margin-bottom: var(--spacer);
+        }
+
+        footer {
+            margin-bottom: var(--spacer);
+            padding-top: var(--half-spacer);
+        }
+
+        h1 {
+            font-size: 0.75rem;
+            text-transform: uppercase;
+            letter-spacing: 0.03em;
+            margin-top: 3em;
+            margin-bottom: 6em;
+        }
+
+        a {
+            color: var(--foreground);
+            text-decoration: none;
+        }
+
+        a:hover {
+            color: var(--foreground--highlight);
+        }
+
+        a:focus,
+        a:active {
+            outline: 1px dotted var(--accent);
+        }
+
+        p a,
+        a:not([href="/"]) {
+            text-decoration: underline;
+            font-size: 0.9375em;
+        }
+
+        section {
+            padding: 0 1em;
+            max-width: 42em;
+            margin: 0 auto;
+        }
+
+        @media screen and (min-width: 992px) {
+            :root {
+                --spacer: 6em;
+                --half-spacer: 3rem;
+            }
+
+            h1 {
+                margin-top: 6em;
+                margin-bottom: 12em;
+            }
+        }
+    </style>
 </head>
 
 <body>
-    <div class="container">
-        <h1 class="intro">
-            <span class="page-title"><span>Hi,</span></span>
-            <span class="page-title"><span>I’m</span></span>
-            <span class="page-title"><span>Riccardo</span></span>
-        </h1>
+    <section>
+        <a href="/">
+            <h1>
+                Riccardo Zaffalon
+            </h1>
+        </a>
 
-        <div class="bio">
-            <img data-reveal data-reveal-delay="700" src="./images/me.jpg" alt="Riccardo Zaffalon, frontend developer">
-
-            <h2 data-reveal>A frontend developer working in Venice,&nbsp;Italy. <br>
+        <div>
+            <h2>A frontend developer working in Venice,&nbsp;Italy. <br>
                 I specialize in building fast and enjoyable web experiences, using modern technologies and user-centered
                 design.
-                <a href="mailto:riccardo.zaffalon@gmail.com" target="_blank" class="bio__link">Get in touch →</a>
+                <a href="#contacts">Get in touch ↓</a>
             </h2>
-
-            <img src="./images/me.jpg" id="profile-image-hover" alt="Riccardo Zaffalon, frontend developer">
         </div>
 
-        <h3 data-reveal>Work</h3>
-        <p data-reveal>
-            Since the beginning of <strong>2018</strong> I have been at <a href="//www.alpenite.com"
+        <p>
+            Since the beginning of <strong>2018</strong>, I have been at <a href="//www.alpenite.com"
                 target="_blank">alpenite</a>, where I work as a
             <strong>Senior Consultant on Salesforce Commerce Cloud</strong> projects. Here I
             have had the opportunity to lead the frontend development of ecommerce websites for several fashion brands,
@@ -53,43 +272,41 @@
             <a href="//www.tezenis.com" target="_blank">Tezenis</a>, <a href="//www.intimissimi.com"
                 target="_blank">Intimissimi</a>, and more.
         </p>
-        <p data-reveal>
+
+        <p>
             Besides these projects, my main focuses are introducing new helpful technologies to streamline my team’s
             work, and
-            <strong>mentor junior colleagues</strong>, to help them grow and bring increasingly more value to the
+            <strong>mentoring junior colleagues</strong>, to help them grow and bring increasingly more value to the
             company.
         </p>
 
-        <h3 data-reveal>Bio</h3>
-        <p data-reveal>
+        <p>
             Previously, I have lived in beautiful <strong>Vancouver, British Columbia</strong>, and worked as a
             freelancer for clients in Italy and Canada, providing digital solutions for small
             business owners and professionals.
         </p>
-        <p data-reveal>
-            Before that I paid my dues interning at a few web agencies, notably at <a href="//www.webtechnet.it"
+        <p>
+            Before that, I paid my dues interning at a few web agencies, notably at <a href="//www.webtechnet.it"
                 target="_blank">webtechnet</a> where I started bringing
-            modern technologies into some of their older projects in <u>2015</u>.
+            modern technologies into some of their older projects in 2015.
         </p>
 
-        <h3 data-reveal>Tech</h3>
-        <p data-reveal>I am proficient in <u>HTML</u>, <u>CSS</u>, and their most popular preprocessors (<em>e.g.
-                <u>Pug</u>, <u>SCSS</u></em>), <u>JavaScript</u> (<em>including <u>ES6</u> and <u>ESNext</u></em>),
-            <u>Salesforce Commerce Cloud</u> (<em>Certified B2C Commerce Developer</em>), and <u>git</u>.
+        <p>I am proficient in HTML, CSS, and their most popular preprocessors (<em>e.g.
+                Pug, SCSS</em>), JavaScript (<em>including ES6 and ESNext</em>),
+            Salesforce Commerce Cloud (<em>Certified B2C Commerce Developer</em>), and git.
         </p>
-        <p data-reveal>I am experienced in <u>React</u>, <u>webpack</u>, and <u>Gulp</u>, as well as design tools such
-            as <u>Figma</u> and <u>Sketch</u>; I am currently focusing on the React ecosystem, with tools such as
-            <u>Next.js</u> and <u>styled-components</u>.
+        <p>I am experienced in React, webpack, and Gulp, as well as design tools such
+            as Figma and Sketch; I am currently focusing on the React ecosystem, with tools such as
+            Next.js and styled-components.
         </p>
 
-        <p data-reveal class="footer">
-            If you want to know more, or just say “👋 Hi”, you are welcome to get in touch anytime at <a
+        <footer id="contacts">
+            If you want to know more, or just say “Hi”, you are welcome to get in touch anytime at <a
                 href="mailto:riccardo.zaffalon@gmail.com" target="_blank">riccardo.zaffalon@gmail.com</a> or find me on
             <a href="//twitter.com/rzaffa" target="_blank">Twitter</a>, <a href="//www.linkedin.com/in/riccardozaffalon"
                 target="_blank">LinkedIn</a>, and <a href="//github.com/RiccardoZaffalon" target="_blank">GitHub</a>.
-        </p>
-    </div>
-    <script src="js/main.js"></script>
+        </footer>
+    </section>
 </body>
 
 </html>
