--- a/src/index.html
+++ b/src/index.html
@@ -170,6 +170,13 @@
             scroll-behavior: smooth;
         }
 
+        @media (prefers-color-scheme: dark) {
+            :root {
+                --background: #242322;
+                --foreground: #ede8e3;
+            }
+        }
+
         body {
             background-color: var(--background);
             color: var(--foreground);
