--- a/src/index.html
+++ b/src/index.html
@@ -22,235 +22,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet">
-    <style>
-        /* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-
-        html,
-        body,
-        div,
-        span,
-        applet,
-        object,
-        iframe,
-        h1,
-        h2,
-        h3,
-        h4,
-        h5,
-        h6,
-        p,
-        blockquote,
-        pre,
-        a,
-        abbr,
-        acronym,
-        address,
-        big,
-        cite,
-        code,
-        del,
-        dfn,
-        em,
-        img,
-        ins,
-        kbd,
-        q,
-        s,
-        samp,
-        small,
-        strike,
-        strong,
-        sub,
-        sup,
-        tt,
-        var,
-        b,
-        u,
-        i,
-        center,
-        dl,
-        dt,
-        dd,
-        ol,
-        ul,
-        li,
-        fieldset,
-        form,
-        label,
-        legend,
-        table,
-        caption,
-        tbody,
-        tfoot,
-        thead,
-        tr,
-        th,
-        td,
-        article,
-        aside,
-        canvas,
-        details,
-        embed,
-        figure,
-        figcaption,
-        footer,
-        header,
-        hgroup,
-        menu,
-        nav,
-        output,
-        ruby,
-        section,
-        summary,
-        time,
-        mark,
-        audio,
-        video {
-            margin: 0;
-            padding: 0;
-            border: 0;
-            font-size: 100%;
-            font: inherit;
-            vertical-align: baseline;
-        }
-
-        /* HTML5 display-role reset for older browsers */
-        article,
-        aside,
-        details,
-        figcaption,
-        figure,
-        footer,
-        header,
-        hgroup,
-        menu,
-        nav,
-        section {
-            display: block;
-        }
-
-        body {
-            line-height: 1;
-        }
-
-        ol,
-        ul {
-            list-style: none;
-        }
-
-        blockquote,
-        q {
-            quotes: none;
-        }
-
-        blockquote:before,
-        blockquote:after,
-        q:before,
-        q:after {
-            content: '';
-            content: none;
-        }
-
-        table {
-            border-collapse: collapse;
-            border-spacing: 0;
-        }
-
-        /* Custom */
-        :root {
-            --spacer: 3em;
-            --half-spacer: 1.5rem;
-            --background: #ede8e3;
-            --foreground: #242322;
-            --accent: #19bb7e;
-            --foreground--highlight: var(--accent);
-            scroll-behavior: smooth;
-        }
-
-        @media (prefers-color-scheme: dark) {
-            :root {
-                --background: #242322;
-                --foreground: #ede8e3;
-            }
-        }
-
-        body {
-            background-color: var(--background);
-            color: var(--foreground);
-            font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-            line-height: 1.6;
-            font-weight: 300;
-        }
-
-        ::-moz-selection {
-            background: var(--foreground);
-            color: var(--background);
-        }
-
-        ::selection {
-            background: var(--foreground);
-            color: var(--background);
-        }
-
-        h2,
-        p {
-            margin-bottom: var(--spacer);
-        }
-
-        footer {
-            margin-bottom: var(--spacer);
-            padding-top: var(--half-spacer);
-        }
-
-        h1 {
-            font-size: 0.75rem;
-            text-transform: uppercase;
-            letter-spacing: 0.03em;
-            margin-top: 3em;
-            margin-bottom: 6em;
-        }
-
-        a {
-            color: var(--foreground);
-            text-decoration: none;
-        }
-
-        a:hover {
-            color: var(--foreground--highlight);
-        }
-
-        a:focus,
-        a:active {
-            outline: 1px dotted var(--accent);
-        }
-
-        p a,
-        a:not([href="/"]) {
-            text-decoration: underline;
-            font-size: 0.9375em;
-        }
-
-        section {
-            padding: 0 1em;
-            max-width: 42em;
-            margin: 0 auto;
-        }
-
-        @media screen and (min-width: 992px) {
-            :root {
-                --spacer: 6em;
-                --half-spacer: 3rem;
-            }
-
-            h1 {
-                margin-top: 6em;
-                margin-bottom: 12em;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="scss/style.scss">
 </head>
 
 <body>
