Update typography and colors

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
     <link rel="shortcut icon" href="favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="scss/style.scss">
 </head>
 
@@ -64,14 +64,14 @@
             freelancer for clients in Italy and Canada, providing digital solutions for small
             business owners and professionals.
         </p>
-        <p>
+        <!-- <p>
             Before that, I paid my dues interning at a few web agencies, notably at <a href="//www.webtechnet.it"
                 target="_blank">webtechnet</a> where I started bringing
             modern technologies into some of their older projects in 2015.
-        </p>
+        </p> -->
 
         <p>I am proficient in HTML, CSS, and their most popular preprocessors (<em>e.g.
-                Pug, SCSS</em>), JavaScript (<em>including ES6 and ESNext</em>),
+                Pug, SCSS</em>), JavaScript (<em>including ES6 and beyond</em>),
             Salesforce Commerce Cloud (<em>Certified B2C Commerce Developer</em>), and git.
         </p>
         <p>I am experienced in React, webpack, and Gulp, as well as design tools such
@@ -79,9 +79,10 @@
             Next.js and styled-components.
         </p>
 
-        <footer id="contacts">
+        <footer>
             If you want to know more, or just say “Hi”, you are welcome to get in touch anytime at <a
-                href="mailto:riccardo.zaffalon@gmail.com" target="_blank">riccardo.zaffalon@gmail.com</a> or find me on
+                href="mailto:riccardo.zaffalon@gmail.com" id="contacts" target="_blank">riccardo.zaffalon@gmail.com</a>
+            or find me on
             <a href="//twitter.com/rzaffa" target="_blank">Twitter</a>, <a href="//www.linkedin.com/in/riccardozaffalon"
                 target="_blank">LinkedIn</a>, and <a href="//github.com/RiccardoZaffalon" target="_blank">GitHub</a>.
         </footer>
