Update packages and styles

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
 
-        gtag('config', 'UA-45220537-1');
+        gtag('config', 'UA-45220537-1', { client_storage: 'none', anonymize_ip: true });
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
