Update current focus topics

--- a/src/index.html
+++ b/src/index.html
@@ -76,7 +76,7 @@
         </p>
         <p>I am experienced in React, webpack, and Gulp, as well as design tools such
             as Figma and Sketch; I am currently focusing on the React ecosystem, with tools such as
-            Next.js and styled-components.
+            Next.js and Tailwind.
         </p>
 
         <footer>
