Update styles and content

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
     <link rel="shortcut icon" href="favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="scss/style.scss">
 </head>
 
@@ -62,7 +62,7 @@
         <p>
             Previously, I have lived in beautiful <strong>Vancouver, British Columbia</strong>, and worked as a
             freelancer for clients in Italy and Canada, providing digital solutions for small
-            business owners and professionals.
+            business owners and professionals since <strong>2016</strong>.
         </p>
         <!-- <p>
             Before that, I paid my dues interning at a few web agencies, notably at <a href="//www.webtechnet.it"
@@ -75,13 +75,14 @@
             Salesforce Commerce Cloud (<em>Certified B2C Commerce Developer</em>), and git.
         </p>
         <p>I am experienced in React, webpack, and Gulp, as well as design tools such
-            as Figma and Sketch; I am currently focusing on the React ecosystem, with tools such as
+            as Figma and Sketch; I am currently focusing on the <strong>React ecosystem</strong>, with tools such as
             Next.js and Tailwind.
         </p>
 
         <footer>
             If you want to know more, or just say “Hi”, you are welcome to get in touch anytime at <a
-                href="mailto:riccardo.zaffalon@gmail.com" id="contacts" target="_blank">riccardo.zaffalon@gmail.com</a>
+                href="mailto:riccardo.zaffalon@gmail.com" id="contacts"
+                target="_blank"><strong>riccardo.zaffalon@gmail.com</strong></a>
             or find me on
             <a href="//twitter.com/rzaffa" target="_blank">Twitter</a>, <a href="//www.linkedin.com/in/riccardozaffalon"
                 target="_blank">LinkedIn</a>, and <a href="//github.com/RiccardoZaffalon" target="_blank">GitHub</a>.
