Replace google analytics with self hosted umami

--- a/src/index.html
+++ b/src/index.html
@@ -2,15 +2,8 @@
 <html lang="en">
 
 <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-45220537-1"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-
-        gtag('config', 'UA-45220537-1', { client_storage: 'none', anonymize_ip: true });
-    </script>
+    <script async defer data-website-id="15b1e08d-4692-4423-8c55-b79905261050"
+        src="https://analytics.riccardozaffalon.com/umami.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
