--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 
 <head>
-    <script async defer data-website-id="15b1e08d-4692-4423-8c55-b79905261050"
-        src="https://analytics.riccardozaffalon.com/umami.js"></script>
+    <script async defer data-website-id="20049794-062f-44d4-af44-b49362fe65fb"
+        src="https://analytics.rzstudio.up.railway.app/umami.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
