--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="bg-neutral-900 scroll-smooth">
 
 <head>
     <script async defer data-website-id="15b1e08d-4692-4423-8c55-b79905261050"
         src="https://analytics.riccardozaffalon.com/umami.js"></script>
+    <script>
+        window.addEventListener("load", (event) => {
+            document.body.classList.add('opacity-100');
+            document.body.classList.remove('opacity-0');
+        });
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -15,72 +21,87 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="scss/style.scss">
+    <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
-    <section>
-        <a href="/">
-            <h1>
-                Riccardo Zaffalon
-            </h1>
-        </a>
+<body class="font-sans bg-neutral-900 text-neutral-100 cursor-default opacity-0 transition-opacity duration-1000">
+    <main class="mx-auto px-8 max-w-5xl">
+        <header class="mt-16 lg:mt-32">
+            <a href="/">
+                <h1 class="text-4xl lg:text-6xl font-bold">
+                    Riccardo Zaffalon
+                </h1>
+            </a>
+        </header>
 
-        <div>
-            <h2>A frontend developer working in Venice,&nbsp;Italy. <br>
-                I specialize in building fast and enjoyable web experiences, using modern technologies and user-centered
-                design.
-                <a href="#contacts">Get in touch ↓</a>
+        <section class="mt-8">
+            <h2 class="text-neutral-300 text-2xl lg:text-4xl font-semibold">A frontend developer working in
+                Venice,&nbsp;Italy <br>
+                –
+                with 6+ years
+                experience.
             </h2>
-        </div>
 
-        <p>
-            Since the beginning of <strong>2018</strong>, I have been at <a href="//www.alpenite.com"
-                target="_blank">alpenite</a>, where I work as a
-            <strong>Senior Consultant on Salesforce Commerce Cloud</strong> projects. Here I
-            have had the opportunity to lead the frontend development of ecommerce websites for several fashion brands,
-            including <a href="https://www.stellamccartney.com/" target="_blank">Stella McCartney</a>, <a
-                href="//www.liujo.com" target="_blank">Liu Jo</a>, <a href="//www.pinko.com" target="_blank">Pinko</a>,
-            <a href="//www.tezenis.com" target="_blank">Tezenis</a>, <a href="//www.intimissimi.com"
-                target="_blank">Intimissimi</a>, and more.
-        </p>
+            <h2 class="text-neutral-300 text-2xl lg:text-4xl font-semibold mt-4">
+                I specialize in building fast, reliable, and human-centered web interfaces.
+            </h2>
+        </section>
 
-        <p>
-            Besides these projects, my main focuses are introducing new helpful technologies to streamline my team’s
-            work, and
-            <strong>mentoring junior colleagues</strong>, to help them grow and bring increasingly more value to the
-            company.
-        </p>
+        <section class="mt-16 lg:mt-32 text-lg lg:text-xl">
+            <p>
+                Since the beginning of <strong>2018</strong>, I have been at <a href="//www.alpenite.com"
+                    target="_blank">alpenite</a>, where I work as a
+                <strong>Senior Consultant on Salesforce Commerce Cloud</strong> projects. Here I
+                have had the opportunity to lead the frontend development of ecommerce websites for several fashion
+                brands,
+                including <a href="https://www.stellamccartney.com/" target="_blank">Stella McCartney</a>, <a
+                    href="//www.liujo.com" target="_blank">Liu Jo</a>, <a href="//www.pinko.com"
+                    target="_blank">Pinko</a>,
+                <a href="//www.tezenis.com" target="_blank">Tezenis</a>, <a href="//www.intimissimi.com"
+                    target="_blank">Intimissimi</a>, and more.
+            </p>
 
-        <p>
-            Previously, I have lived in beautiful <strong>Vancouver, British Columbia</strong>, and worked as a
-            freelancer for clients in Italy and Canada, providing digital solutions for small
-            business owners and professionals since <strong>2016</strong>.
-        </p>
-        <!-- <p>
+            <p>
+                Besides these projects, my main focuses are introducing new helpful technologies to streamline my team’s
+                work, and
+                <strong>mentoring junior colleagues</strong>, to help them grow and bring increasingly more value to the
+                company.
+            </p>
+
+            <p>
+                Previously, I have lived in beautiful <strong>Vancouver, British Columbia</strong>, and worked as a
+                freelancer for clients in Italy and Canada, providing digital solutions for small
+                business owners and professionals since <strong>2016</strong>.
+            </p>
+            <!-- <p>
             Before that, I paid my dues interning at a few web agencies, notably at <a href="//www.webtechnet.it"
                 target="_blank">webtechnet</a> where I started bringing
             modern technologies into some of their older projects in 2015.
         </p> -->
 
-        <p>I am proficient in HTML, CSS, and their most popular preprocessors (<em>e.g.
-                Pug, SCSS</em>), JavaScript (<em>including ES6 and beyond</em>),
-            Salesforce Commerce Cloud (<em>Certified B2C Commerce Developer</em>), and git.
-        </p>
-        <p>I am experienced in React, webpack, and Gulp, as well as design tools such
-            as Figma and Sketch; I am currently focusing on the <strong>React ecosystem</strong>, with tools such as
-            Next.js and Tailwind.
-        </p>
+            <p>I am proficient in HTML, CSS, and their most popular preprocessors (<em>e.g.
+                    Pug, SCSS</em>), JavaScript (<em>including ES6 and beyond</em>),
+                Salesforce Commerce Cloud (<em>Certified B2C Commerce Developer</em>), and git.
+            </p>
 
-        <footer>
-            If you want to know more, or just say “Hi”, you are welcome to get in touch anytime at <a
-                href="mailto:riccardo.zaffalon@gmail.com" id="contacts"
-                target="_blank"><strong>riccardo.zaffalon@gmail.com</strong></a>
-            or find me on
-            <a href="//twitter.com/rzaffa" target="_blank">Twitter</a>, <a href="//www.linkedin.com/in/riccardozaffalon"
-                target="_blank">LinkedIn</a>, and <a href="//github.com/RiccardoZaffalon" target="_blank">GitHub</a>.
+            <p>I am experienced in React and webpack, as well as design tools such
+                as Figma and Sketch; I am currently focusing on the <strong>React ecosystem</strong>, with tools such as
+                Next.js, Astro, and Tailwind.
+            </p>
+        </section>
+
+        <footer class="my-16 text-lg lg:text-xl">
+            <p>
+                If you want to know more, or just say “Hi”, you are welcome to get in touch anytime at <a
+                    href="mailto:riccardo.zaffalon@gmail.com" id="contacts" target="_blank"
+                    class="focus:outline-dotted focus:outline-amber-400"><strong>riccardo.zaffalon@gmail.com</strong></a>
+                or find me on
+                <a href="//twitter.com/rzaffa" target="_blank">Twitter</a>, <a
+                    href="//www.linkedin.com/in/riccardozaffalon" target="_blank">LinkedIn</a>, and <a
+                    href="//github.com/RiccardoZaffalon" target="_blank">GitHub</a>.
+            </p>
         </footer>
-    </section>
+    </main>
 </body>
 
 </html>
