Update Theme color

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <title>Riccardo Zaffalon — Frontend web developer</title>
     <meta name="description"
         content="Riccardo Zaffalon, frontend web developer specialized in building fast and enjoyable web experiences, using modern web technologies and user-centered design">
-    <meta name="theme-color" content="#111111">
+    <meta name="theme-color" content="#1c1423">
     <link rel="shortcut icon" href="favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
