Add missing aria attribute for a11y

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
 </head>
 
 <body class="font-sans text-neutral-100 cursor-default transition-opacity duration-1000" style="opacity: 0;">
-    <canvas id="canvas" class="bg-gradient-to-br from-[#1c1423] to-transparent"></canvas>
+    <canvas aria-hidden="true" id="canvas" class="bg-gradient-to-br from-[#1c1423] to-transparent"></canvas>
     <main class="mx-auto px-8 max-w-5xl">
         <header class="mt-16 lg:mt-32">
             <a href="/">
